project1 ref change

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -1105,34 +1105,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulated Data Results\n",
+    "\n",
+    "The results of the simulation are presented in a DataFrame named `simulated_df2`. A careful examination of the simulated data reveals that the distributions of the variables closely resemble those observed in the original dataset. The use of left-skewed  and exponential distributions successfully captures the statistical characteristics of online shopping behavior"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    "1. Beta distribution and left skewed data (Stackoverflow)[https://stackoverflow.com/questions/24854965/create-random-numbers-with-left-skewed-probability-distribution]\n",
+    "\n",
+    "2. https://www.kaggle.com/code/sidhus/probability-distributions\n",
+    "\n",
+    "3. https://en.wikipedia.org/wiki/Synthetic_data\n",
+    "\n",
+    "4. https://app.datacamp.com/learn/courses/statistical-simulation-in-python\n",
+    "\n",
+    "5. Simulating Real-Life Processes in Python by NeuralNine https://www.youtube.com/watch?v=8SLk_uRRcgc\n",
+    "\n",
+    "6. https://datagy.io/seaborn-histplot/\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Grammarly VSCode extension [https://marketplace.visualstudio.com/items?itemName=znck.grammarly] was used to check grammar. I am sorry for mistakes("
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_successful' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Firefly\\Documents\\GitHub\\prog_for_data_analysis\\project1.ipynb Cell 28\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Firefly/Documents/GitHub/prog_for_data_analysis/project1.ipynb#X36sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscipy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstats\u001b[39;00m \u001b[39mimport\u001b[39;00m kstest, anderson\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Firefly/Documents/GitHub/prog_for_data_analysis/project1.ipynb#X36sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Example using the Kolmogorov-Smirnov test\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Firefly/Documents/GitHub/prog_for_data_analysis/project1.ipynb#X36sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m ks_stat, ks_p_value \u001b[39m=\u001b[39m kstest(df_successful[\u001b[39m'\u001b[39m\u001b[39mBounceRates\u001b[39m\u001b[39m'\u001b[39m], \u001b[39m'\u001b[39m\u001b[39mbeta\u001b[39m\u001b[39m'\u001b[39m, args\u001b[39m=\u001b[39m(\u001b[39m2\u001b[39m, \u001b[39m5\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Firefly/Documents/GitHub/prog_for_data_analysis/project1.ipynb#X36sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mKolmogorov-Smirnov test p-value: \u001b[39m\u001b[39m{\u001b[39;00mks_p_value\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Firefly/Documents/GitHub/prog_for_data_analysis/project1.ipynb#X36sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Example using the Anderson-Darling test\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_successful' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from scipy.stats import kstest, anderson\n",
-    "\n",
-    "# Example using the Kolmogorov-Smirnov test\n",
-    "ks_stat, ks_p_value = kstest(df_successful['BounceRates'], 'beta', args=(2, 5))\n",
-    "print(f\"Kolmogorov-Smirnov test p-value: {ks_p_value}\")\n",
-    "\n",
-    "# Example using the Anderson-Darling test\n",
-    "ad_stat, ad_critical_values, ad_significance_levels = anderson(df_successful['BounceRates'], dist='beta')\n",
-    "print(f\"Anderson-Darling test statistic: {ad_stat}\")\n",
-    "print(f\"Critical values: {ad_critical_values}\")\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
